# pqviewer

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-publish.yml
pqviewer/: __main__.py  app.py  cli.py  exceptions.py  file_parser.py  global.tcss  help_screen.py  table_content.py  table_header.py  table_schema.py  themes_screen.py
pqviewer/core/: file_parser.py
pqviewer/views/: help_screen.py  table_content.py  table_footer.py  table_header.py  table_schema.py
src/pqviewer/: exceptions.py  table_header.py
tests/unit/: test_main.py
tests/unit/assets/: invalid.csv
