[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqviewer"
version = "0.0.1"
description = "View Apache Parquet Files In Your Terminal"
dependencies = [
  "textual",
  "pyarrow"
]
authors = [{name = "thread53", email = "thread53@users.noreply.github.com"}]
license = {text = "MIT License"}
readme = "README.md"
keywords = ["parquet", "terminal", "tui", "cli", "python"]
requires-python = ">=3.7"

[project.scripts]
pqviewer = "pqviewer.cli:pqviewer"