[tool.poetry]
name = "pqviewer"
version = "0.2.9"
description = "View Apache Parquet Files In Your Terminal"
authors = ["thread53 <thread53@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/thread53/pqviewer"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.8",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.8"
textual = "==0.46.0"
pyarrow = ">=17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pqviewer = "pqviewer.cli:pqviewer"